--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container-info" style="text-align:center;">
   <div class="title">
-    <h1>Monthly Open Mic Night</h1>
-      <h3 class="date">Join us on the 9th of September for our Open Mic Night at the Luus Muus in Egg</h3>
+    <h1>LuusMuus Open Mic Night</h1>
+      <h3 class="date">Join us at the Luus Muus in Egg on:</h3>
+      <h3>28th of September | 19th of October | 22nd of November</h3>
   </div>
 
   <div class="information">
@@ -22,11 +23,11 @@
   </div>
 
   <div class="cta">
-    <h3>Sign up to join the line up on the 9th of September</h3>
+    <h3>Pre-register to join the line up</h3>
   </div>
 
   <div class="btnIndex">
-    <%= link_to "Sign Up", posts_path, class: "btn-primary btn btn-lg"%>
+    <%= link_to "Pre-register", posts_path, class: "btn-primary btn btn-lg"%>
   </div>
 </div>
 
