lil css homepage + restructure date

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -70,6 +70,13 @@ body {
     background-attachment: fixed;
     background-size: auto;
   }
+  .date {
+    letter-spacing: 0.2em;
+  }
+
+  .tagline {
+    margin-bottom: 1em;
+  }
   // block colour background draft
 
   // .title {
