--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container-info" style="text-align:center;">
   <div class="title">
     <h1>LuusMuus Open Mic Night</h1>
-      <h3 class="date">Join us at the Luus Muus in Egg on:</h3>
-      <h3>28th of September | 19th of October | 22nd of November</h3>
+      <div class="date">
+        <h3 class="tagline">Join us at the Luus Muus in Egg on:</h3>
+        <h3>Xth of September | Xth of October | Xnd of November</h3>
+      </div>
   </div>
 
   <div class="information">
@@ -19,7 +21,7 @@
       <h3>Benefits</h3>
       <h5>One free drink </h5>
       <h5>50% off food & drinks</h5>
-      </div>
+    </div>
   </div>
 
   <div class="cta">
@@ -29,6 +31,10 @@
   <div class="btnIndex">
     <%= link_to "Pre-register", posts_path, class: "btn-primary btn btn-lg"%>
   </div>
+  <div class="cta">
+    <h3>No Performing without registering</h3>
 </div>
+</div>
+
 
 <%# <h5>&#9758; One free drink &#9756;</h5> %>
