text edits + icons to reminder register

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,16 +4,17 @@
       <div class="date">
         <h3 class="tagline">Join us at the Luus Muus in Egg on:</h3>
         <h3>Xth of September | Xth of October | Xnd of November</h3>
+        <h3>7-10pm</h3>
       </div>
   </div>
 
   <div class="information">
     <div class="rules">
       <h3>Rules for performers</h3>
-      <h5>3 songs per set</h5>
+      <h5>Pre-registration required</h5>
       <h5>1 set per performer</h5>
+      <h5>3 songs per set</h5>
       <h5>Musicians arrive 6:30pm</h5>
-      <h5>Event is 7-10pm</h5>
       <h5>Original music especially encouraged</h5>
     </div>
 
@@ -33,7 +34,7 @@
   </div>
 
   <div class="cta">
-    <h3>No Performing without registering</h3>
+    <h3>&#9758; No performing without pre-registering &#9756;</h3>
   </div>
 </div>
 
