--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -82,6 +82,9 @@ body {
     margin-top: 1em;
     margin-bottom: 1em;
   }
+  .cta {
+    font-size: 1.5em;
+  }
   // block colour background draft
 
   // .title {
