--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <div class="cta">
-    <h3>&#9758; No performing without pre-registering &#9756;</h3>
+    <h3>No performing without pre-registering</h3>
   </div>
 </div>
 
