--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -83,7 +83,9 @@ body {
     margin-bottom: 1em;
   }
   .cta {
-    font-size: 1.5em;
+    h3 {
+      font-size: 1.5em;
+    }
   }
   // block colour background draft
 
