--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,7 +3,7 @@
     <h1>LuusMuus Open Mic Night</h1>
       <div class="date">
         <h3 class="tagline">Join us at the Luus Muus in Egg on:</h3>
-        <h3>| 21st of October |</h3>
+        <h3>| 18th of November |</h3>
         <h3>7-10pm</h3>
       </div>
   </div>
